InternexDev_Sandbox/src/objects/QB_Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DetailType__c</fullName>
        <label>DetailType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Value__c</fullName>
        <label>Item Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_ID__c</fullName>
        <label>Line ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Amount__c</fullName>
        <label>Line Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCodeRef__c</fullName>
        <label>TaxCodeRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>QB Invoice Line Item</label>
    <nameField>
        <displayFormat>LN-{00000}</displayFormat>
        <label>QB Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Invoice Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>